# simple-openai-transcribe

./: Cargo.toml  LICENSE  README.md  SPEC.md
scripts/: install-systemd-user-service.sh
src/: app.rs  audio.rs  config.rs  env.rs  history.rs  ipc.rs  logging.rs  main.rs  openai.rs
systemd/: simple-openai-transcribe.service.in
