[package]
name = "simple-openai-transcribe"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { package = "libadwaita", version = "0.7" }
anyhow = "1.0"
arboard = "3.6"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
dotenvy = "0.15"
futures-util = "0.3"
glib = "0.20"
gtk = { package = "gtk4", version = "0.9" }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
